# godot-rust-demo

godot/: icon.svg.import  project.godot  rust.gdextension
godot/scene/: world.tscn
godot/script/: Client.gd  Player.gd
rust/: Cargo.toml
rust/src/: conn.rs  lib.rs  player.rs
