[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
anyhow = "1.0.79"
bytes = "1.5.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
